# django

./: .env.docker  .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.docker/: Dockerfile  supervisord.conf
api/: models.py  urls.py  views.py
api/fixtures/: initial_data.json
api/migrations/: 0001_initial.py
app/: admin.py  apps.py  authentication.py  custom_responses.py  exceptions.py  models.py  serializers.py  urls.py  views.py
app/fixtures/: databases.json  initial_data.json  migrate_databases.json  migrate_tables.json  tasks.json  users.json
app/migrations/: 0001_initial.py  0002_alter_jstask_type.py  0002_alter_migratedatabase_source_db_and_more.py
app/services/: clickhouse_service.py  database.py  mapping.py  migrate_tables.py  mysql_service.py
app/services/migrate/: common.py
app/utils/: consumers.py  encryption.py  model.py  notify.py
app/views/: auth_views.py  chart_views.py  task_views.py  user_views.py  views.py
config/: logging.py
core/: consumers.py
core/services/: database.py
jetshift/: asgi.py  settings.py  urls.py  views.py  wsgi.py
jetshift/templates/: home.html
jetshift_core/commands/: main.py  make.py  quicker.py  version.py
jetshift_core/commands/migrations/: clickhouse.py  common.py  migration.py  mysql.py
jetshift_core/commands/seeders/: clickhouse.py  common.py  mysql.py  seeder.py
jetshift_core/helpers/: clcikhouse.py  clickhouse.py  common.py  database.py  mysql.py  quicker.py  subtask.py
jetshift_core/helpers/cli/: common.py
jetshift_core/helpers/migrations/: common.py  tables.py
jetshift_core/services/: clickhouse.py  database_map.py  mysql.py  storage_s3.py
jetshift_core/tasks/: cdc_from_aws_s3.py  mysql_clickhouse.py
jetshift_core/tasks/migrate/: mysql_clickhouse.py
jetshift_core/utils/: debug.py  init_django.py  prefect_api.py
jetshift_core/utils/database/: sqlalchemy_mysql.py
play/: databases.sample.yml
play/jobs/: ping.py
play/migrations/: test_users.yml  users.yml
play/quickers/: test.yml
