[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetshift"
version = "1.0.0-alpha.1"
description = "JetShift ETL Tool"
authors = [{ name = "Md Obydullah", email = "hi@obydul.me" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "django==5.1.7",
    "channels==4.2.0",
    "uvicorn[standard]==0.34.0",
    "djangorestframework==3.15.2",
    "django-cors-headers==4.6.0",
    "jetshift-core==1.0.0a32",
    "clickhouse-sqlalchemy==0.3.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jetshift_core*"]
exclude = ["tests*"]

[project.scripts]
jetshift = "jetshift_core.commands.main:main"
